--- a/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
+++ b/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FacebookShareBonus.cs" />
+    <Compile Include="FacebookBonusCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
