--- a/SingLife.FacebookShareBonus.Tests/SingLife.FacebookShareBonus.UnitTests.csproj
+++ b/SingLife.FacebookShareBonus.Tests/SingLife.FacebookShareBonus.UnitTests.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FacebookShareBonus.UnitTests.cs" />
+    <Compile Include="FacebookBonusCalculator_UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
