--- a/SingLife.FacebookShareBonus.Tests/packages.config
+++ b/SingLife.FacebookShareBonus.Tests/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="FakeItEasy" version="4.3.0" targetFramework="net461" />
   <package id="NUnit" version="2.6.0.12054" targetFramework="net461" />
 </packages>
