Change production code when test code change (require remaining items zero points) and refactor name follows Peter

--- a/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
+++ b/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FacebookBonus.cs" />
+    <Compile Include="FacebookBonusCalculationInput.cs" />
     <Compile Include="FacebookBonusCalculator.cs" />
+    <Compile Include="IPolicySortService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
