--- a/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
+++ b/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
@@ -46,5 +46,12 @@
     <Compile Include="IPolicySortService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\codecracker.CSharp.1.0.3\analyzers\dotnet\cs\CodeCracker.Common.dll" />
+    <Analyzer Include="..\packages\codecracker.CSharp.1.0.3\analyzers\dotnet\cs\CodeCracker.CSharp.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
