Clean code  + New logic calculate FacebookBonus

--- a/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
+++ b/SingLife.FacebookShareBonus.Model/SingLife.FacebookShareBonus.Model.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="FacebookBonus.cs" />
     <Compile Include="FacebookBonusCalculationInput.cs" />
+    <Compile Include="FacebookBonusCalculator2.cs" />
     <Compile Include="FacebookBonusCalculator.cs" />
     <Compile Include="IPolicySortService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
