--- a/SingLife.FacebookShareBonus.Model.Tests.UT/SingLife.FacebookShareBonus.Model.Tests.UT.csproj
+++ b/SingLife.FacebookShareBonus.Model.Tests.UT/SingLife.FacebookShareBonus.Model.Tests.UT.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FacebookBonusCalculatorTests.cs" />
+    <Compile Include="FacebookBonusCalculatorTests2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
